# kde1-kdeutils

./: CMakeLists.txt
common/: config.h
klipper/: toplevel.cpp
kpm/: details.C
ktop/: OSProcess.cpp
po/: ark.pot  kab.pot  karm.pot  kcalc.pot  kedit.pot  kfloppy.pot  khexdit.pot  kjots.pot  klipper.pot  kljettool.pot  klpq.pot  knotes.pot  kpm.pot  ktop.pot  kwrite.pot
po/br/: ark.po  kab.po  karm.po  kcalc.po  kedit.po  kfloppy.po  khexdit.po  kjots.po  klipper.po  kljettool.po  klpq.po  knotes.po  kpm.po  ktop.po  kwrite.po
po/cs/: klipper.po  klpq.po  kpm.po  ktop.po
po/de/: klipper.po
po/el/: kedit.po  khexdit.po
po/fi/: karm.po  khexdit.po
po/fr/: kab.po  karm.po  kcalc.po  kfloppy.po  klipper.po  klpq.po  kpm.po  ktop.po  kwrite.po
po/hu/: kab.po  karm.po  kcalc.po  kjots.po  knotes.po
po/is/: kljettool.po  knotes.po  kpackage.po  kpm.po
po/it/: ark.po  kab.po  karm.po  kcalc.po  kedit.po  kfloppy.po  khexdit.po  kjots.po  klipper.po  kljettool.po  klpq.po  knotes.po  kpm.po  kwrite.po
po/ja/: ark.po  kab.po  karm.po  kcalc.po  kedit.po  kfloppy.po  khexdit.po  kjots.po  klipper.po  kljettool.po  klpq.po  knotes.po  kpm.po  ktop.po  kwrite.po
po/nl/: ark.po  karm.po  kedit.po  khexdit.po  klpq.po
po/pl/: kab.po
po/pt_BR/: kab.po  kcmail.po  kcrontab.po  kexpress.po  kjots.po  kjumpingCube.po  klipper.po  klpq.po  knetmon.po  kpackage.po  kpm.po  ktelnet.po  kwebtree.po  kwrite.po  webmaker.po
po/ro/: ark.po
po/sk/: klpq.po
po/sv/: karm.po  kedit.po  khexdit.po  kjots.po  klipper.po  kljettool.po  knotes.po
po/tr/: ark.po  karm.po  kcalc.po  kedit.po  kfloppy.po  khexdit.po  kljettool.po  knotes.po
po/zh_CN.GB2312/: klpq.po
po/zh_TW.Big5/: ark.po  karm.po  kcalc.po  kedit.po  khexdit.po  knotes.po
